--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   geolocator: ^12.0.0
   http: ^1.2.2
   provider: ^6.1.2
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  get_it: ^7.6.4
+  injectable: ^2.3.2
+  dartz: ^0.10.1
   flutter_polyline_points: ^2.1.0
   loading_animation_widget: ^1.2.1
   googleapis: ^13.2.0
@@ -59,6 +64,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.1.4
+  mockito: ^5.4.2
+  build_runner: ^2.4.7
+  injectable_generator: ^2.4.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
