--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,11 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.7.0
   connectivity_plus: ^6.0.4
-  firebase_auth: ^5.1.2
-  cloud_firestore: ^5.1.0
-  firebase_database: ^11.0.3
-  firebase_storage: ^12.1.1
+  firebase_messaging: ^15.0.4
   permission_handler: ^11.3.1
   geolocator: ^14.0.2
   http: ^1.2.2
+  dio: ^5.4.0
   provider: ^6.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
@@ -52,13 +50,14 @@ dependencies:
   url_launcher: ^6.3.0
   country_picker: ^2.0.26
   google_sign_in: ^6.2.1
+  shared_preferences: ^2.2.2
+  jwt_decoder: ^2.0.1
  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.2.0
   pinput: ^5.0.0
 
 dev_dependencies:
