--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   pinput: ^5.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
