feat: Add WalletPage with modern UI design
- Created comprehensive wallet screen with balance display
- Added action buttons for Add Money, Send Money, and History
- Implemented transaction history with mock data
- Used responsive design with AppTheme and AppDimensions
- Added coming soon dialogs for future functionality
- Follows established design patterns and architecture

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value=""/>
+            android:value="AIzaSyDGxIhn1cDap5bfDeVKZef45ldCMZCkK1o"/>
     </application>s
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
